# chromdetect

./: .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  paper.bib  paper.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
chromdetect/: __init__.py  __main__.py  assembly_report.py  cli.py  compare.py  core.py  html_report.py  patterns.py  telomere.py
examples/: README.md  basic_usage.py  batch_processing.py  karyotype_detection.py  synthetic_assembly.fasta  synthetic_assembly_v2.fasta
tests/: __init__.py  test_assembly_report.py  test_cli.py  test_compare.py  test_convenience.py  test_core.py  test_custom_patterns.py  test_gc_content.py  test_html_report.py  test_patterns.py  test_quality_score.py  test_telomere.py
