[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "chromdetect"
version = "0.1.0"
description = "Detect chromosome-level scaffolds in genome assemblies with inconsistent naming conventions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
    { name = "Verity Project", email = "verity@example.com" }
]
keywords = [
    "genomics",
    "bioinformatics",
    "genome-assembly",
    "chromosome",
    "scaffolds",
    "VGP",
    "karyotype"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.1",
]

[project.scripts]
chromdetect = "chromdetect.cli:main"

[project.urls]
Homepage = "https://github.com/verity-project/chromdetect"
Documentation = "https://github.com/verity-project/chromdetect#readme"
Repository = "https://github.com/verity-project/chromdetect.git"
Issues = "https://github.com/verity-project/chromdetect/issues"

[tool.hatch.build.targets.wheel]
packages = ["chromdetect"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.coverage.run]
source = ["chromdetect"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
